# codexzoumaguanbei

./: .gitignore
award_rebase_newbase/award_src/: main.cpp
award_rebase_newbase/award_src/include/: Fuzzy.hpp  Init.hpp  Servo.hpp  Vofa.hpp  image.hpp  motor.hpp
award_rebase_newbase/award_src/src/: Fuzzy.cpp  Init.cpp  Init.cpp.v0_20260505_award_rebase_running  Servo.cpp  Vofa.cpp  image.cpp  motor.cpp  motor.cpp.v0_20260505_award_rebase_running
award_rebase_newbase/libraries/zf_device/: zf_device_ips200_fb.cpp
award_rebase_newbase/user/: CMakeLists.txt  build.sh.v0_20260505_award_rebase_running  legacy_compat.cpp  legacy_compat.hpp  main.cpp  main.cpp.v0_20260505_award_rebase_running  zf_common_headfile.h
code/: .gitignore  A_BOARD_CHECKLIST.md  CMakeLists.txt  INTERFACE.md  PROJECT_STATUS.md  README.md  TASK_SPLIT.md  main.cpp  manual_page7_Image150.raw  manual_page7_Image26.raw  manual_page7_KSPX115.raw  old_tracking_core.tar  rv1103.cmake
code/include/: Init.hpp  Key_scan.hpp  Menu.hpp  award_signal.hpp  award_vision_adapter.hpp  camera_app.hpp  motor.hpp  zf_common_headfile.h
code/official_motor_base/E3_motor/E03_01_drv8701e_double_motor_control_demo/user/: CMakeLists.txt  build.sh  build.sh.v1_20260504  main.cpp  main.cpp.bak_air_line_unstable_20260427_190408  main.cpp.bak_air_no_motor_20260427_184812  main.cpp.bak_before_capture_debug_20260427_192618  main.cpp.bak_before_fast_line_20260427_191005  main.cpp.bak_before_realtime_line_20260427_194308  main.cpp.bak_before_target_capture_20260429_162729  main.cpp.bak_center_follow_from_debug_20260427_193811  main.cpp.bak_direct_motor_ok_20260427_185033  main.cpp.bak_line_static_20260427_153822  main.cpp.bak_line_static_pass_20260427_184334  main.cpp.bak_right_edge_center_20260427_191817  main.cpp.bak_right_wheel_stuck_20260427_192116  main.cpp.bak_speed_ok_20260427_185847  main.cpp.bak_speed_phase_20260427_185658  main.cpp.bak_video1_tune_20260427_194859  main.cpp.v1_20260504
code/official_motor_base/E3_motor/libraries/smartcar_app/: smartcar_camera.cpp  smartcar_camera.hpp  smartcar_display.cpp  smartcar_display.hpp  smartcar_encoder.cpp  smartcar_encoder.hpp  smartcar_line.cpp  smartcar_line.cpp.bak_20260427_154119  smartcar_line.cpp.bak_old_principle_v1_20260427_200035  smartcar_line.hpp  smartcar_line.hpp.bak_20260427_154119  smartcar_motor.cpp  smartcar_motor.cpp.bak_disable_print_20260427_195319  smartcar_motor.hpp  smartcar_speed.cpp  smartcar_speed.cpp.bak_right_wheel_stuck_20260427_192116  smartcar_speed.cpp.bak_soft_20260427_185429  smartcar_speed.hpp
code/src/: Init.cpp  Key_scan.cpp  Menu.cpp  award_signal.cpp  award_vision_adapter.cpp  camera_app.cpp  image.cpp  motor.cpp  official_motor_bridge.cpp
tools/: git_bootstrap.ps1
